front is working!

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -36,7 +36,11 @@
             <input type="text" id="quantity" name="quantity" placeholder="enter a number"/>
             (default: 10)
           </form>
-          <button id="seed-all">Seed all</button>
+		  <div id="btn-group">
+			  <button id="drop-tables" class="reset">Drop tables</button>
+			  <button id="create-tables" class="reset">Create tables</button>
+			  <button id="seed-all">Seed all</button>
+		  </div>
         </div>
         <div id="view"></div>
       </section>
